WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144654
Fix a build break on EFL debug
https://bugs.webkit.org/show_bug.cgi?id=144654
Summary
Fix a build break on EFL debug
Jinwoo Jeong
Reported
2015-05-05 18:56:03 PDT
There is a build error when compiling EFL debug build. ../../Source/WebKit2/Shared/CoordinatedGraphics/CoordinatedGraphicsScene.cpp:79:25: error: 'class WebCore::TextureMapper' has no member named 'accelerationMode' ../../Source/WebKit2/Shared/CoordinatedGraphics/CoordinatedGraphicsScene.cpp:79:47: error: 'OpenGLMode' is not a member of 'WebCore::TextureMapper' ../../Source/WebKit2/Shared/CoordinatedGraphics/CoordinatedGraphicsScene.cpp: In member function 'void WebKit::CoordinatedGraphicsScene::paintToGraphicsContext(PlatformGraphicsContext*, const WebCore::Color&, bool)': ../../Source/WebKit2/Shared/CoordinatedGraphics/CoordinatedGraphicsScene.cpp:125:25: error: 'class WebCore::TextureMapper' has no member named 'accelerationMode' ../../Source/WebKit2/Shared/CoordinatedGraphics/CoordinatedGraphicsScene.cpp:125:47: error: 'SoftwareMode' is not a member of 'WebCore::TextureMapper'
Attachments
Patch
(1.86 KB, patch)
2015-05-05 19:04 PDT
,
Jinwoo Jeong
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jinwoo Jeong
Comment 1
2015-05-05 19:04:06 PDT
Created
attachment 252434
[details]
Patch
Gyuyoung Kim
Comment 2
2015-05-05 19:24:04 PDT
Comment on
attachment 252434
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=252434&action=review
> Source/WebKit2/Shared/CoordinatedGraphics/CoordinatedGraphicsScene.cpp:-79 > - ASSERT(m_textureMapper->accelerationMode() == TextureMapper::OpenGLMode);
I think we should keep this assert. If there is build break by code change, we need to support this assert under new code change.
Hyungwook Lee
Comment 3
2015-05-06 20:42:39 PDT
According to
https://bugs.webkit.org/show_bug.cgi?id=143561
, we only have OpenGL backend in TextureMapper. So I think we can remove unnecessary assert.
Gyuyoung Kim
Comment 4
2015-05-06 20:58:35 PDT
Comment on
attachment 252434
[details]
Patch I missed that accelerationMode was removed, and we don't need to check it anymore. Because we begin to only support OpenGL mode. Thanks !
WebKit Commit Bot
Comment 5
2015-05-06 21:47:29 PDT
Comment on
attachment 252434
[details]
Patch Clearing flags on attachment: 252434 Committed
r183910
: <
http://trac.webkit.org/changeset/183910
>
WebKit Commit Bot
Comment 6
2015-05-06 21:47:34 PDT
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 7
2015-05-06 23:07:53 PDT
Ooops, I missed it, thanks for the fix.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug