Fix a build break on EFL debug build https://bugs.webkit.org/show_bug.cgi?id=144654

Patch by Jinwoo Jeong <jw00.jeong@samsung.com> on 2015-05-06
Reviewed by Gyuyoung Kim.

No new tests, just build fix.

* Shared/CoordinatedGraphics/CoordinatedGraphicsScene.cpp:
(WebKit::CoordinatedGraphicsScene::paintToCurrentGLContext):
(WebKit::CoordinatedGraphicsScene::paintToGraphicsContext):

Canonical link: https://commits.webkit.org/162744@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183910 268f45cc-cd09-0410-ab3c-d52691b4dbfc